@@ -83,6 +83,9 @@ Changes on 1.2.0 since 1.1.0:
     View menu. New size will be remembered in config for the appropriate
     type of icons.
 
+* Added configuration for toolbar: it can be now hidden, and elements on
+    it (New Tab, navigations, Home) can be hidden individually as well.
+
 
 Changes on 1.1.0 since 1.0.1:
 
